compilateurDeca/src/test/deca/syntax/invalid/objet/dot.deca
// Description:
//   Sélection '.' sans membre après le point.
// Resultats:
//    Echec (erreur de syntaxe)
//
// Historique:
//    cree le 15/01/2026

class A { int x; }
{
    A a;
    a = new A();
    println(a.);
}
